1.1.0:
- Price history
- Scanning with haptic feedback
- Clear shopping lists
- Auto fill login with recent credentials
- Proper color contrasts
- Bug fixes and improvements

1.0.0:
- Bug fixes and improvements

0.9.3
- Prevent double taps in lists
- Swiped items with elevation in dark mode
- Demo indicator
- GitHub link in About
- Bug fixes and improvements

0.9.2
- Bug fixes and improvements

0.9.1:
- Implement shopping list
- Bug fixes and improvements