@@ -50,7 +50,8 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true">
+            android:layout_centerHorizontal="true"
+            android:animateLayoutChanges="true">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_scan_batch_count"
@@ -123,6 +124,34 @@
 
         </LinearLayout>
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card_scan_batch_type"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:minWidth="40dp"
+            android:layout_marginTop="64dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"
+            app:cardBackgroundColor="#40000000"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
+            app:rippleColor="@color/highlight"
+            app:contentPaddingRight="16dp"
+            app:contentPaddingLeft="16dp">
+
+        <TextView
+            android:id="@+id/text_scan_batch_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:background="@color/transparent"
+            android:fontFamily="@font/roboto_mono_medium"
+            android:textSize="15.5sp"
+            android:textColor="@color/white"/>
+
+    </com.google.android.material.card.MaterialCardView>
+
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -149,37 +178,29 @@
 
         </FrameLayout>
 
-        <LinearLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card_scan_batch_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_margin="32dp"
             android:layout_centerInParent="true"
             android:layout_alignParentBottom="true"
-            android:gravity="center">
+            app:cardBackgroundColor="#99000000"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:contentPadding="12dp">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_scan_batch_info"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="32dp"
-                app:cardBackgroundColor="#99000000"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp"
-                app:contentPadding="12dp">
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:background="@color/transparent"
+                android:text="Point your camera at a barcode"
+                android:textSize="15.5sp"
+                android:textColor="@color/white"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textAlignment="center"
-                    android:background="@color/transparent"
-                    android:text="Point your camera at a barcode"
-                    android:textSize="15.5sp"
-                    android:textColor="@color/white"/>
-
-            </com.google.android.material.card.MaterialCardView>
-
-        </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
 
     </RelativeLayout>
 
