@@ -55,6 +55,8 @@
     <string name="action_perform_purchasing_processes">Perform purchase transactions for created products</string>
 
     <string name="tooltip_new_products_count">Count of new products</string>
+    <string name="tooltip_switch_purchase">Switch to purchase mode</string>
+    <string name="tooltip_switch_consume">Switch to consume mode</string>
     <string name="tooltip_demo">Your\'re in demo mode</string>
 
     <string name="msg_expiring_products">%1$d expiring soon</string>
